# cbyte-obs-plugin

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
.github/workflows/: build-project.yaml  dispatch.yaml  pr-pull.yaml  push.yaml
cmake/common/: bootstrap.cmake  buildspec_common.cmake  helpers_common.cmake  osconfig.cmake
src/: Plugin.cpp  Plugin.hpp  plugin-main.cpp
